--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -47,6 +47,11 @@
             <ul class="nav">
               <li class="active"><a href="<?php echo $this->url('home') ?>"><?php echo $this->translate('Home') ?></a></li>
             </ul>
+          </div><!--/.nav-collapse -->          
+          <div class="nav-collapse">
+            <ul class="nav">
+              <li class="active"><a href="<?php echo $this->url('album') ?>"><?php echo $this->translate('Álbum') ?></a></li>
+            </ul>
           </div><!--/.nav-collapse -->
         </div>
       </div>
