--- a/module/Album/view/album/album/index.phtml
+++ b/module/Album/view/album/album/index.phtml
@@ -7,6 +7,9 @@ $this->headTitle($title);
 <p>
     <a href="<?php echo $this->url('album', array('action'=>'add'));?>">Add new album</a>
 </p>
+<p>
+    <a href="<?php echo $this->url('album', array('action'=>'add'));?>">Add new person</a>
+</p>
 
 <table class="table">
 <tr>
