--- a/module/Cadastro/view/cadastro/cadastro/index.phtml
+++ b/module/Cadastro/view/cadastro/cadastro/index.phtml
@@ -1,25 +1,31 @@
 <?php
-$title = 'My albums';
+$title = 'Pessoas';
 $this->headTitle($title);
 ?>
 <h1><?php echo $this->escapeHtml($title); ?></h1>
 
 <p>
-    <a href="<?php echo $this->url('album', array('action'=>'add'));?>">Add new album</a>
+    <a href="<?php echo $this->url('cadastro', array('action'=>'add'));?>">Cadastra Nova Pessoa</a>
 </p>
 
 <table class="table">
 <tr>
-    <th>Title</th>
-    <th>Artist</th>
+    <th>Razão Social</th>
+    <th>Nome Fantasia</th>
+    <th>Telefone</th>
+    <th>E-mail</th>
+    <th>Estado Civil</th>
     <th>&nbsp;</th>
 </tr>
 <?php foreach ($albums as $album) : ?>
     <tr>
-        <td><?php echo $this->escapeHtml($album->title);?></td>
-        <td><?php echo $this->escapeHtml($album->artist);?></td>
-        <td><a href="<?php echo $this->url('album', array('action'=>'edit', 'id' => $album->id));?>">Edit</a>
-            <a href="<?php echo $this->url('album', array('action'=>'delete', 'id' => $album->id));?>">Delete</a>
+        <td><?php echo $this->escapeHtml($album->razaosocial);?></td>
+        <td><?php echo $this->escapeHtml($album->nome_fantasia);?></td>
+        <td><?php echo $this->escapeHtml($album->telefone);?></td>
+        <td><?php echo $this->escapeHtml($album->email);?></td>
+        <td><?php echo $this->escapeHtml($album->id_estado_civil);?></td>
+        <td><a href="<?php echo $this->url('cadastro', array('action'=>'edit', 'id' => $cadastro->id));?>">Edit</a>
+            <a href="<?php echo $this->url('cadastro', array('action'=>'delete', 'id' => $cadastro->id));?>">Delete</a>
         </td>
     </tr>
 <?php endforeach; ?>
