Começo da implementação

--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -53,6 +53,11 @@
               <li class="active"><a href="<?php echo $this->url('album') ?>"><?php echo $this->translate('Álbum') ?></a></li>
             </ul>
           </div><!--/.nav-collapse -->
+          <div class="nav-collapse">
+            <ul class="nav">
+              <li class="active"><a href="<?php echo $this->url('cadastro') ?>"><?php echo $this->translate('Cadastro') ?></a></li>
+            </ul>
+          </div><!--/.nav-collapse -->
         </div>
       </div>
     </div>
