Conserto dos Nomes

--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -55,7 +55,7 @@
           </div><!--/.nav-collapse -->
           <div class="nav-collapse">
             <ul class="nav">
-              <li class="active"><a href="<?php echo $this->url('cadastro') ?>"><?php echo $this->translate('Cadastro') ?></a></li>
+              <li class="active"><a href="<?php echo $this->url('pessoa') ?>"><?php echo $this->translate('Pessoa') ?></a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
